--- a/dokumentace.html
+++ b/dokumentace.html
@@ -42,13 +42,21 @@
 </table>
 
 <h2>Implementace</h2>
-<p>Stručná dokumentace k implementaci, která popisuje, které PHP skripty implementují jednotlivé případy použití uvedené v use-case diagramu z IDS. V případě, že bylo nutno při implementaci učinit změny v návrhu, musí být v dokumentaci zdůvodněny.</p>
+<p>Stručná dokumentace k implementaci, která popisuje, které PHP skripty implementují jednotlivé případy použití uvedené v use-case diagramu z IDS. V případě, že bylo nutno při implementaci učinit změny v návrhu, musí být v dokumentaci zdůvodněny. Bohužel jsme až poslední den zjistili, že laravel má debugování v sobě, tak jsme byli omezeni nevypsáním chybových hlášek a museli hledat vše ručně, což byl důvod, proč jsme neimplementovali aliance.</p>
 
 <h2>Instalace</h2>
 <ul>
-<li>Stručně popište postup instalace na server</li>
-<li>Softwarové požadavky (verze PHP apod.)</li>
-<li>Jak rozbalit, konfigurovat, inicializovat databází, ...</li>
+<li>Je třeba nainstalovat laravel</li>
+<li>PHP v7.1.3</li>
+<li>OpenSSL PHP Extension</li>
+<li>PDO PHP Extension</li>
+<li>Mbstring PHP Extension</li>
+<li>Tokenizer PHP Extension</li>
+<li>XML PHP Extension</li>
+<li>Ctype PHP Extension</li>
+<li>JSON PHP Extension</li>
+<li>BCMath PHP Extension</li>
+<li>Pro vytvoření databáze stačí zprovoznit mysql admin, nastavit v </li>
 </ul>
 
 <h2>Známé problémy</h2>
