--- a/dokumentace.html
+++ b/dokumentace.html
@@ -49,7 +49,7 @@
 	Databáze je napsána v MySQL. <br>
 	Soubor /resources/views/layouts/app.blade.php obsahuje základní rozvržení stránky, které je pak importováno do ostatních stránek <br>
 	Složka /resources/views obsahuje php soubory s obsahem pro jednotlivé stránky (nastavení účtu, administrace, práce s kriminálnímí činnostmi, stránku s územími, ...)<br>
-	Složka /app/Http/Controllers obsahuje kontrolery (téměř pro každý view je jeden kontroler) <br>
+	Složka /app/Http/Controllers obsahuje ovladače (kontrolery) <br>
 	Složka /app obsahuje modely
 </p>
 
