--- a/dokumentace.html
+++ b/dokumentace.html
@@ -69,7 +69,7 @@
 </ul>
 
 <h2>Známé problémy</h2>
-<p>Vzhledem k první zkušenosti s laravelem implementace nemusí být dokonalá. Usoudili jsme, že je zbytečné uchovávat, zda li je uživatel Caporegime, nebo Řádový člen, toto jsme specifikovali pouze v tabulce users ve sloupci permission, kde číslo se uchovává číslo práv; čím vyšší práva, tím vyšší pozice (až na výjimku s právem 5, což je admin) a uchovávat, zda-li je činnost vraždou, což stačí napsat v popisku kriminální činnosti. Bohužel jsme až poslední den zjistili, že laravel má debugování v sobě, tak jsme byli omezeni nevypsáním chybových hlášek a museli hledat vše ručně, což byl důvod, proč jsme neimplementovali aliance a pozvání na setkání donů.</p>
+<p>Vzhledem k první zkušenosti s laravelem implementace nemusí být dokonalá. Prosíme o trpělivost při přistupování k databázi; hosting je dost pomalý. Usoudili jsme, že je zbytečné uchovávat, zda li je uživatel Caporegime, nebo Řádový člen, toto jsme specifikovali pouze v tabulce users ve sloupci permission, kde číslo se uchovává číslo práv; čím vyšší práva, tím vyšší pozice (až na výjimku s právem 5, což je admin) a uchovávat, zda-li je činnost vraždou, což stačí napsat v popisku kriminální činnosti. Bohužel jsme až poslední den zjistili, že laravel má debugování v sobě, tak jsme byli omezeni nevypsáním chybových hlášek a museli hledat vše ručně, což byl důvod, proč jsme neimplementovali aliance a pozvání na setkání donů.</p>
 
 </body>
 </html>
