--- a/dokumentace.html
+++ b/dokumentace.html
@@ -45,12 +45,14 @@
 
 <h2>Implementace</h2>
 <p>
-	Implementace probíhala v kombinaci bootstrapu s frameworkem laravelem. <br>
+	Implementace probíhala v kombinaci bootstrapu s frameworkem laravelem (v 5.4) <br>
 	Databáze je napsána v MySQL. <br>
 	Soubor /resources/views/layouts/app.blade.php obsahuje základní rozvržení stránky, které je pak importováno do ostatních stránek <br>
 	Složka /resources/views obsahuje php soubory s obsahem pro jednotlivé stránky (nastavení účtu, administrace, práce s kriminálnímí činnostmi, stránku s územími, ...)<br>
 	Složka /app/Http/Controllers obsahuje ovladače (kontrolery) <br>
-	Složka /app obsahuje modely
+	Složka /app obsahuje modely <br>
+	Složka /config obsahuje soubory s nastavením aplikace (debug mód, databáze, ..) <br>
+	Složka /routes obsahuje cesty (speciální odkazování na stránky) 
 </p>
 
 <h2>Instalace</h2>
